syntax = "proto3";

package realfin.creditscore;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "realfin/creditscore/params.proto";
import "realfin/creditscore/rate.proto";

option go_package = "realfin/x/creditscore/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreateRate   (MsgCreateRate  ) returns (MsgCreateRateResponse  );
  rpc UpdateRate   (MsgUpdateRate  ) returns (MsgUpdateRateResponse  );
  rpc DeleteRate   (MsgDeleteRate  ) returns (MsgDeleteRateResponse  );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                             "authority";
  option           (amino.name) = "realfin/x/creditscore/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  
  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreateRate {
  option (cosmos.msg.v1.signer) = "creator";
  string creator     = 1;
  string symbol      = 2;
  uint64 rate        = 3;
  string name        = 4;
  string description = 5;
}

message MsgCreateRateResponse {}

message MsgUpdateRate {
  option (cosmos.msg.v1.signer) = "creator";
  string creator     = 1;
  string symbol      = 2;
  uint64 rate        = 3;
  string name        = 4;
  string description = 5;
}

message MsgUpdateRateResponse {}

message MsgDeleteRate {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string symbol  = 2;
}

message MsgDeleteRateResponse {}

